--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.36.5",
     "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "process": "^0.11.10",
     "quicktype-core": "^23.0.171",
     "vue": "^3.5.13",
