--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@codemirror/state": "^6.4.0",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.36.5",
+    "@emailjs/browser": "^4.4.1",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
     "process": "^0.11.10",
